--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -2,11 +2,18 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     font-size: 16px;
     font-weight: 400;
-    background-color: yellowgreen;
 }
 
-.container {
-    padding-top: 3em;
+.table-body {
+    padding-top: 20px;
+}
+
+footer {
+    height: 20px;
+}
+
+.table-hover tbody tr:hover {
+    background-color: rgb(198, 201, 206)
 }
 
 #navbar {
